[package]
name = "inthrustwetrust"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Utilities for rocket engine simulation"
homepage = "https://github.com/martindevans/InThrustWeTrust"
repository = "https://github.com/martindevans/InThrustWeTrust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = 2

[dependencies]
roots = "0.0.7"